# bolero

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/models/: dude.gltf  metal_rough_balls.gltf  squares_and_things.gltf
assets/shaders/: basic.glsl  blinn_phong.glsl  brdf_lut.glsl  cubemap_convolution.glsl  def_light_pass.glsl  equirect_to_cubemap_pass.glsl  fwd_light_pass.glsl  geometry_pass.glsl  light_pass.glsl  point_shadow_pass.glsl  post_pass.glsl  prefilter.glsl  prefilter_pass.glsl  renderer_test.glsl  shadow_mask_pass.glsl  shadow_pass.glsl  skybox.glsl  test.glsl
sandbox/: main.cpp
src/: bolero.hpp  main.cpp
src/app/: input.cpp  input.hpp  window.cpp  window.hpp
src/app/pass/: opaque.hpp
src/core/: asset_manager.cpp  asset_manager.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  frame_capturer.cpp  frame_capturer.hpp  gpu_layout.hpp  image_buffer.cpp  image_buffer.hpp  image_format.hpp  lights.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  passes.hpp  primitive_builder.cpp  primitive_builder.hpp  render_context.hpp  resource.hpp  scene.cpp  scene.hpp  serial.cpp  serial.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  transform.hpp  types.hpp  uuid.hpp  vertex_array.cpp  vertex_array.hpp  vfs.cpp  vfs.hpp
src/core/wrappers/: buffer.cpp  buffer.hpp  cubemap.cpp  cubemap.hpp  framebuffer.cpp  framebuffer.hpp  vertex_array.cpp  vertex_array.hpp
src/passes/: brdf_lut.hpp  dir_shadow.hpp  ibl_setup.hpp  irradiance.hpp  opaque.hpp  point_shadow.hpp  post.hpp  prefilter.hpp  shadow.hpp  skybox.hpp  spot_shadow.hpp  ssaa_resolve.hpp  ui.hpp
src/renderer/: pass.hpp  pipeline.hpp  renderer.cpp  renderer.hpp
src/ui/: ui.cpp  ui.hpp
src/utils/: base.hpp  cpu_timer.hpp  debug.cpp  debug.hpp  gpu_timer.hpp  math.hpp  uuid.hpp
src/window/: window.cpp  window.hpp
